--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
     <script src="javascripts/main.js"></script>
-    <title>obama</title>
+    <title>javelin</title>
   </head>
   <body>
     <div id="particles-js"></div>
-    <div class="loading">
-      <img src='loading.gif'>
-    </div>
     <div class = "line">
     </div>
     <a style="font-family: Raleway; color: #FFFFFF;" href="http://guso.io/">
       <div id="return">
         <p> GUSO.IO </p>
       </div>
-    </a> 
+    </a>
     <header>
       <p style="font-family: Raleway; color: #FFFFFF; font-size: 60px; text-align: center;">Obama     | |     Markov</p>
     </header>
