--- a/index.html
+++ b/index.html
@@ -22,19 +22,7 @@
       </div>
     </a>
     <header>
-      <p style="font-family: Raleway; color: #FFFFFF; font-size: 60px; text-align: center;">Obama     | |     Markov</p>
+      <p style="font-family: Raleway; color: #FFFFFF; font-size: 60px; text-align: center;">Pencil Throwers</p>
     </header>
-    <div class = "intro">
-      <p style="font-family: Raleway; color: #FFFFFF; font-size: 20px; text-align: center;">
-        This button creates coherent sentences by utilizing a Markov chain with the things Obama has said in the past. Click to see what Obama has to say.
-      </p>
-    </div>
-    <a style="font-family: Raleway; color: #FFFFFF;" href="#">
-      <div class = "button">
-        <h1 id="buttonT"> SAUCE ME </h1>
-      </div>
-    </a>
-    <div class = "talk">
-    </div>
   </body>
 </html>
