--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="icon" type="image/png" href="icon.png">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,800" rel="stylesheet">
     <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -22,7 +23,7 @@
       </div>
     </a>
     <header>
-      <p style="font-family: Raleway; color: #FFFFFF; font-size: 60px; text-align: center;">Pencil Throwers</p>
+      <div class="Title">Pencil Throwers</div>
     </header>
   </body>
 </html>
