--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
     <header>
       <div class="Title">Pencil Throwers</div>
     </header>
+    <div id="projects">
+      <span id="T">C</span><span id="itle">ONTROLS</span>
+    </div>
+    <div id="player1">
+    </div>
+    <div id="player2">
+    </div>
   </body>
 </html>
