--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <div id="projects">
       <span id="T">C</span><span id="itle">ONTROLS</span>
     </div>
-    <div id="player1">
-    </div>
-    <div id="player2">
+    <div id="controls">
+      <div id="player1">
+      </div>
+      <div id="player2">
+      </div>
     </div>
   </body>
 </html>
