--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
     <header>
       <div class="Title">Pencil Throwers</div>
     </header>
-    <div id="projects">
-      <span id="T">C</span><span id="itle">ONTROLS</span>
+    <div id="webplayer">
+    </div>
+    <div id="controlbanner">
+      <span class="CTitle">CONTROLS</span>
     </div>
     <div id="controls">
       <div id="player1">
+        <span id="T">P</span><span id="itle">LAYER ONE</span>
       </div>
       <div id="player2">
+        <span id="T">P</span><span id="itle">LAYER TWO</span>
       </div>
     </div>
   </body>
