--- a/index.html
+++ b/index.html
@@ -33,9 +33,21 @@
     <div id="controls">
       <div id="player1">
         <span id="T">P</span><span id="itle">LAYER ONE</span>
+        <br>
+        W - Jump
+        <br>
+        A - Left
+        <br>
+        D - Right
       </div>
       <div id="player2">
         <span id="T">P</span><span id="itle">LAYER TWO</span>
+        <br>
+        ↑ - Jump
+        <br>
+        ← - Left
+        <br>
+        → - Right
       </div>
     </div>
   </body>
