--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="icon" type="image/png" href="icon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron: bold" rel="stylesheet">
     <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
