--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         A - Left
         <br>
         D - Right
+        <br>
+        R - Tilt Up
+        <br>
+        F - Tilt Down
+        <br>
+        E - Throw
       </div>
       <div id="player2">
         <span id="T">P</span><span id="itle">LAYER TWO</span>
@@ -49,6 +55,12 @@
         ← - Left
         <br>
         → - Right
+        <br>
+        / - Tilt Up
+        <br>
+        Ctrl - Tilt Down
+        <br>
+        Shift - Throw
       </div>
     </div>
   </body>
