--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <header>
       <div class="Title">Pencil Throwers</div>
     </header>
-    <div id="webplayer">
-    </div>
+    <iframe src="guso.io/pencilpushers" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="320px" width="480px"></iframe>
     <div id="controlbanner">
       <span class="CTitle">CONTROLS</span>
     </div>
