--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </a>
     <header>
-      <div class="Title">Pencil Throwers</div>
+      <div class="Title">Pencil Pushers</div>
     </header>
     <iframe src="http://guso.io/pencilpushers" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="600px" width="100%"></iframe>
     <div id="controlbanner">
