--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
       <div class="Title">Pencil Pushers</div>
     </header>
     <iframe src="http://guso.io/pencilpushers" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="600px" width="100%"></iframe>
-    <div id="controlbanner">
-      <span class="CTitle">CONTROLS</span>
-    </div>
-    <div id="player1">
-      <span id="T">P</span><span id="itle">LAYER ONE</span>
-      <br>
+    <div id="controls">
+      <div id="player1">
+        <span id="T">P</span><span id="itle">LAYER ONE</span>
+        <br>
         W - Jump
         <br>
         A - Left
@@ -43,8 +41,8 @@
         F - Tilt Down
         <br>
         E - Throw
-    </div>
-    <div id="player2">
+      </div>
+      <div id="player2">
         <span id="T">P</span><span id="itle">LAYER TWO</span>
         <br>
         ↑ - Jump
@@ -58,7 +56,7 @@
         Ctrl - Tilt Down
         <br>
         Shift - Throw
-    </div>
+      </div>
     </div>
   </body>
 </html>
