--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
       <div id="player2">
         <span id="T">P</span><span id="itle">LAYER TWO</span>
         <br>
-        ↑ - Jump
+        I - Jump
         <br>
-        ← - Left
+        J - Left
         <br>
-        → - Right
+        L - Right
         <br>
-        / - Tilt Up
+        P - Tilt Up
         <br>
-        Ctrl - Tilt Down
+        ; - Tilt Down
         <br>
-        Shift - Throw
+        O - Throw
       </div>
     </div>
   </body>
