--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p> GUSO.IO </p>
       </div>
     </a>
-    <iframe src="http://guso.io/pencilpushers" style="border:0px #000000 none; box-shadow: 0px 0px 40px rgba(0,0,0,1);" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="657px" width="100%"></iframe>
+    <iframe src="http://guso.io/pencilpushers" style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px" marginwidth="320px" height="657px" width="100%"></iframe>
     <div id="controls">
       <div id="player1">
         <span id="T">P</span><span id="itle">LAYER ONE</span>
